# OOP-Lab3

./: .gitignore  CMakeLists.txt  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: array.h  figure.h  hexagon.h  octagon.h  triangle.h
src/: array.cpp  figure.cpp  hexagon.cpp  octagon.cpp  triangle.cpp
tests/: test_lab3.cpp
